--- a/src/components/productPage/ProductPage.module.css
+++ b/src/components/productPage/ProductPage.module.css
@@ -7,7 +7,7 @@
 
 .products-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 40px;
     padding: 20px 40px;
 }
