--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -13,6 +13,10 @@
     padding: 20px 40px;
 }
 
+.checkout-container {
+    padding: 0 40px;
+}
+
 .cart-item-container {
     display: flex;
     flex-direction: column;
