--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -23,8 +23,23 @@
 .list-item {
     list-style-type: none;
     display: block;
+    position: relative;
 }
 
 .link {
     text-decoration: none;
+}
+
+.cart-products-count {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: scale(0.7) translate(80%, -80%);
+    rotate: 0;
+    transition: rotate 0.2s;
+    color: red;
+}
+
+.cart-products-count:hover {
+    rotate: 20deg;
 }
