feat: Implement single page add to cart

--- a/src/components/product/Product.module.css
+++ b/src/components/product/Product.module.css
@@ -1,20 +1,8 @@
-.header {
-    font-size: 1.5rem;
-    font-family: "Italiana", sans-serif;
-    font-weight: bold;
-    padding: 0 40px;
-}
-
-.products-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 40px;
-    padding: 20px 40px;
-}
-
 .product-container {
+    padding: 0 40px;
+    gap: 20px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     font-family:
         Roboto,
         system-ui,
@@ -30,13 +18,8 @@
         sans-serif;
 }
 
-.product-container:hover {
-    transform: scale(0.9);
-    border: 2px solid magenta;
-}
-
 .image {
-    max-width: 100%;
+    max-width: 300px;
     height: auto;
     flex: 1;
     object-fit: contain;
@@ -45,4 +28,10 @@
 .button {
     font-family: inherit;
     padding: 8px 8px;
+}
+
+.product-title {
+    font-size: 1.5rem;
+    font-family: "Italiana", sans-serif;
+    font-weight: bold;
 }
