--- a/src/components/productPage/ProductPage.module.css
+++ b/src/components/productPage/ProductPage.module.css
@@ -3,6 +3,7 @@
     font-family: "Italiana", sans-serif;
     font-weight: bold;
     padding: 0 40px;
+    cursor: default;
 }
 
 .products-container {
@@ -28,11 +29,34 @@
         "Open Sans",
         "Helvetica Neue",
         sans-serif;
+    border: 1px solid var(--primary);
+    border-radius: 20px;
+    transition: 0.5s transform;
 }
 
 .product-container:hover {
-    transform: scale(0.9);
-    border: 2px solid magenta;
+    transform: scale(1.05);
+}
+
+.product-container:active {
+    transform: scale(1);
+    transition-duration: 0.25s;
+}
+
+.product-info::before {
+    content: "";
+    background: var(--primary);
+    padding: 0.5px;
+    margin-bottom: 9px;
+}
+
+.product-info {
+    text-align: left;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
 }
 
 .image {
@@ -40,9 +64,19 @@
     height: auto;
     flex: 1;
     object-fit: contain;
+    padding: 20px;
 }
 
 .button {
     font-family: inherit;
     padding: 8px 8px;
+}
+
+.price {
+    font-size: 1.1rem;
+    color: var(--accent);
+}
+
+.title {
+    color: var(--secondary);
 }
