--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -1,3 +1,20 @@
+.carts-page {
+    cursor: default;
+    font-family:
+        Roboto,
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        "Open Sans",
+        "Helvetica Neue",
+        sans-serif;
+}
+
 .header {
     font-size: 1.5rem;
     font-family: "Italiana", sans-serif;
@@ -15,33 +32,87 @@
 
 .checkout-container {
     padding: 0 40px;
+    display: flex;
+    gap: 8px;
+    align-items: end;
 }
 
 .cart-item-container {
     display: flex;
     flex-direction: column;
-    font-family:
-        Roboto,
-        system-ui,
-        -apple-system,
-        BlinkMacSystemFont,
-        "Segoe UI",
-        Roboto,
-        Oxygen,
-        Ubuntu,
-        Cantarell,
-        "Open Sans",
-        "Helvetica Neue",
-        sans-serif;
+    border: 1px solid var(--primary);
+    border-radius: 20px;
+    transition: 0.5s transform;
 }
 
 .image {
     max-width: 100%;
     height: auto;
+    padding: 20px;
     flex: 1;
     object-fit: contain;
 }
 
-.checkout-dialog {
-    margin: auto;
+.product-info {
+    text-align: left;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
+}
+
+.product-info::before {
+    content: "";
+    background: var(--primary);
+    padding: 0.5px;
+    margin-bottom: 9px;
+}
+
+.price,
+.products-count {
+    font-size: 1.1rem;
+    color: var(--primary);
+    font-weight: bold;
+}
+
+.checkout-info {
+    font: inherit;
+    background: var(--secondary);
+    max-width: fit-content;
+    padding: 20px;
+    color: var(--bg);
+    border-radius: 20px;
+}
+
+.checkout-button {
+    background: var(--primary);
+    color: var(--bg);
+    padding: 20px 40px;
+    border-radius: 20px;
+    transition: 0.5s transform;
+    position: relative;
+}
+
+.checkout-button:hover {
+    transform: scale(1.05);
+}
+
+.checkout-button:active {
+    transition-duration: 0.25s;
+    transform: scale(1);
+}
+
+.product-info .title {
+    color: var(--secondary);
+}
+
+.product-info .count {
+    font-weight: bold;
+}
+
+.empty-cart {
+    font-size: 1.5rem;
+    /*color: var(--secondary);*/
+    opacity: 0.4;
 }
