--- a/src/components/product/Product.module.css
+++ b/src/components/product/Product.module.css
@@ -56,6 +56,68 @@
 
 .add-to-cart-container {
     grid-area: cart;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.add-to-cart-button {
+    background: var(--primary);
+    color: var(--bg);
+    padding: 20px 40px;
+    border-radius: 20px;
+    transition: 0.5s transform;
+    position: relative;
+}
+
+.add-to-cart-button:hover {
+    transform: scale(1.05);
+}
+
+.add-to-cart-button:active {
+    transition-duration: 0.25s;
+    transform: scale(1);
+}
+
+.added-info {
+    position: absolute;
+    top: 0;
+    right: 0;
+    translate: 20% -20%;
+    color: var(--accent);
+    animation: 0.5s ease-in-out grow 1;
+}
+
+@keyframes grow {
+    0% {
+        transform: scale(0);
+    }
+
+    70% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(0.9);
+    }
+}
+
+.quantity {
+    width: 10ch;
+    padding: 4px;
+    border: 2px solid var(--primary);
+    border-radius: 10px;
+}
+
+.quantity-label {
+    font: inherit;
+    font-weight: bold;
+}
+
+.price {
+    color: var(--accent);
+    font-weight: bold;
+    font-size: 2rem;
 }
 
 @media (max-width: 500px) {
