feat: Add responsiveness for mobile, complete header design

--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -116,3 +116,10 @@
     /*color: var(--secondary);*/
     opacity: 0.4;
 }
+
+@media (max-width: 500px) {
+    .checkout-container {
+        flex-direction: column;
+        align-items: start;
+    }
+}
