--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -56,3 +56,9 @@
 .cart-products-count:hover {
     rotate: 20deg;
 }
+
+@media (max-width: 500px) {
+    .navbar {
+        padding: 20px 20px;
+    }
+}
